carteira_investimentos/src/tests/assets_tests/snapshots/carteira_investimentos__tests__assets_tests__test_services__tests__assets_page-3.snap
---
source: src/tests/assets_tests/test_services.rs
expression: available_assets_2
---
[
  {
    "id": 3,
    "name": "Lite Coin",
    "unit_value": 2.75,
    "registrant_id": 2,
    "registered_at": "[TIMESTAMP]"
  },
  {
    "id": 1,
    "name": "Bitcoin",
    "unit_value": 15.99,
    "registrant_id": 1,
    "registered_at": "[TIMESTAMP]"
  },
  {
    "id": 2,
    "name": "Ethereum",
    "unit_value": 10.35,
    "registrant_id": 1,
    "registered_at": "[TIMESTAMP]"
  }
]
